--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
     - name: Lint with pylint
       run: |
         make lint
+    - name: Format code with black
+      run: |
+        make format
     - name: Test with pytest
       run: |
         make test
